# mq-rest-admin-rust

./: .gitignore  .markdownlint.json  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  mapping-data.json  rust-toolchain.toml  standard-tooling.toml  vergil.toml
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: add-to-project.yml  cd.yml  ci-push.yml  ci.yml  docs.yml  publish-docs.yml  publish-release.yml  publish.yml
1.2/: 404.html  index.html  sitemap.xml
1.2/ai-engineering/: index.html
1.2/api/: index.html
1.2/architecture/: index.html
1.2/changelog/: index.html
1.2/design/: index.html
1.2/development/: index.html
1.2/examples/: index.html
1.2/getting-started/: index.html
1.2/mapping-pipeline/: index.html
1.2/mappings/: index.html
1.2/releases/: index.html
1.2/search/: search_index.json
dev/: 404.html  index.html  sitemap.xml
dev/ai-engineering/: index.html
dev/api/: index.html
dev/architecture/: index.html
dev/changelog/: index.html
dev/design/: index.html
dev/development/: index.html
dev/examples/: index.html
docs/: llvm-coverage-notes.md  repository-standards.md  standards-and-conventions.md
examples/: channel_status.rs  dlq_inspector.rs  health_check.rs  provision_environment.rs  queue_depth_monitor.rs  queue_status.rs
releases/: v1.2.0.md  v1.2.1.md
src/: auth.rs  commands.rs  ensure.rs  error.rs  examples.rs  lib.rs  mapping.rs  mapping_data.rs  mapping_merge.rs  session.rs  sync_ops.rs  test_helpers.rs  transport.rs
test-fixtures/: test-cert.pem  test-combined.pem  test-key.pem
tests/: integration.rs
(+161 files in other folders)
